Version 0.8b
    Compilation fixes for Visual C++
    Improved cmake files

Version 0.8a
    Compilation fixes for gcc 4.4

Version 0.8
    Initial distribution

ChangeLog starts here.