@@ -25,6 +25,7 @@
 
 #include <map>
 #include <sstream>
+#include <cstring>
 #include <boost/cstdint.hpp>
 #include <boost/shared_ptr.hpp>
 #include <boost/array.hpp>
@@ -33,8 +34,47 @@
 namespace cal {
 namespace il {
 
-class Source
+template<int N>
+class SourceGenerator
 {
+public:
+#if defined(__CAL_HPP__) || defined(__CAL_H__)
+    struct device_info
+    {
+        int available;
+
+        CALtarget  target;
+        CALuint    maxResource1DWidth;
+        CALuint    maxResource2DWidth;
+        CALuint    maxResource2DHeight;
+
+        CALuint    localRAM;            /**< Amount of local GPU RAM in megabytes */
+        CALuint    uncachedRemoteRAM;   /**< Amount of uncached remote GPU memory in megabytes */
+        CALuint    cachedRemoteRAM;     /**< Amount of cached remote GPU memory in megabytes */
+        CALuint    engineClock;         /**< GPU device clock rate in megahertz */
+        CALuint    memoryClock;         /**< GPU memory clock rate in megahertz */
+        CALuint    wavefrontSize;       /**< Wavefront size */
+        CALuint    numberOfSIMD;        /**< Number of SIMDs */
+        CALboolean doublePrecision;     /**< double precision supported */
+        CALboolean localDataShare;      /**< local data share supported */
+        CALboolean globalDataShare;     /**< global data share supported */
+        CALboolean globalGPR;           /**< global GPR supported */
+        CALboolean computeShader;       /**< compute shader supported */
+        CALboolean memExport;           /**< memexport supported */
+        CALuint    pitch_alignment;     /**< Required alignment for calCreateRes allocations (in data elements) */
+        CALuint    surface_alignment;   /**< Required start address alignment for calCreateRes allocations (in bytes) */
+        CALuint    numberOfUAVs;        /**< Number of UAVs */
+        CALboolean bUAVMemExport;       /**< Hw only supports mem export to simulate 1 UAV */
+        CALboolean b3dProgramGrid;      /**< CALprogramGrid for have height and depth bigger than 1*/
+        CALuint    numberOfShaderEngines;/**< Number of shader engines */
+        CALuint    targetRevision;      /**< Asic family revision */
+
+        CALuint   availLocalRAM;          /**< Amount of available local GPU RAM in megabytes */
+        CALuint   availUncachedRemoteRAM; /**< Amount of available uncached remote GPU memory in megabytes */
+        CALuint   availCachedRemoteRAM;   /**< Amount of available cached remote GPU memory in megabytes */
+    };
+#endif
+
 protected:
     unsigned next_instruction_index;
     
@@ -45,7 +85,10 @@ protected:
     std::stringstream                       code_stream;
         
 public:
-    static  Source                         code;
+    static SourceGenerator<N>              code;
+#if defined(__CAL_HPP__) || defined(__CAL_H__)
+    static device_info                     info;
+#endif
         
 protected:
     void iemitHeader( std::ostream& _out )
@@ -69,12 +112,12 @@ protected:
     }
         
 public:
-    Source()
+    SourceGenerator()
     {
         next_instruction_index=0;
         next_literal_index = 0; 
     }
-    ~Source()
+    ~SourceGenerator()
     {
     }
 
@@ -132,7 +175,60 @@ public:
     static void begin()
     {
         code.clear();
+#if defined(__CAL_HPP__) || defined(__CAL_H__)
+        std::memset( &info, 0, sizeof(info) );
+#endif
     }
+
+#if defined(__CAL_H__)
+    static void begin( CALuint ordinal )
+    {
+        CALdeviceinfo    _info;
+        CALdeviceattribs _attribs;
+
+        begin();
+
+        _attribs.struct_size = sizeof(CALdeviceattribs);
+
+        if( calDeviceGetInfo(&_info,ordinal)!=CAL_RESULT_OK ) return;
+        if( calDeviceGetAttribs(&_attribs,ordinal)!=CAL_RESULT_OK ) return;
+
+        info.available = 1;
+
+        info.target = _info.target;
+        info.maxResource1DWidth = _info.maxResource1DWidth;
+        info.maxResource2DWidth = _info.maxResource2DWidth;
+        info.maxResource2DHeight = _info.maxResource2DHeight;
+
+        info.localRAM = _attribs.localRAM;
+        info.uncachedRemoteRAM = _attribs.uncachedRemoteRAM;
+        info.cachedRemoteRAM = _attribs.cachedRemoteRAM;
+        info.engineClock = _attribs.engineClock;
+        info.memoryClock = _attribs.memoryClock;
+        info.wavefrontSize = _attribs.wavefrontSize;
+        info.numberOfSIMD = _attribs.numberOfSIMD;
+        info.doublePrecision = _attribs.doublePrecision;
+        info.localDataShare = _attribs.localDataShare;
+        info.globalDataShare = _attribs.globalDataShare;
+        info.globalGPR = _attribs.globalGPR;
+        info.computeShader = _attribs.computeShader;
+        info.memExport = _attribs.memExport;
+        info.pitch_alignment = _attribs.pitch_alignment;
+        info.surface_alignment = _attribs.surface_alignment;
+        info.numberOfUAVs = _attribs.numberOfUAVs;
+        info.bUAVMemExport = _attribs.bUAVMemExport;
+        info.b3dProgramGrid = _attribs.b3dProgramGrid;
+        info.numberOfShaderEngines = _attribs.numberOfShaderEngines;
+        info.targetRevision = _attribs.targetRevision;
+    }
+#endif
+
+#if defined(__CAL_HPP__)
+    static void begin( const cal::Device& device )
+    {
+        begin(device.getInfo<CAL_DEVICE_INDEX>());
+    }
+#endif
 
     static void end()
     {
@@ -149,7 +245,10 @@ public:
     }
 };
 
-Source Source::code;
+template<int N> SourceGenerator<N> SourceGenerator<N>::code;
+template<int N> typename SourceGenerator<N>::device_info SourceGenerator<N>::info;
+
+typedef SourceGenerator<0> Source;
 
 namespace detail {
 
